<resources>
    <string name="ad_unit_id" translatable="false">ca-app-pub-3610949611532769/8537941335</string>
    <string name="test_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="patch_notes" translatable="false">Patch 1.3.1(54)\n\nRemoved Crashlytics.\n\nUpdated app speed and information distribution.\n\nFixes Ranked Season Sorting.\n\nUpdated to a new WTR/CA Rating provider. Takes longer to grab that data.\n\nIncreased minimum update time from 3 to 5 days to prevent overusing the data provider.</string>
    <string name="update_notes_achieve" translatable="false">\n\n\nPatch 1.3(50)\n\nFixed an issue where grabbing all of the player\'s ships would bring in old ones.\n\nFixed a few bugs in newer logic crashing the app.\n\nPatch 1.3(49)\n\nFixing an issue where the app wouldn\'t launch if an API failed.\n\nRemoving Capture points and Dropped Capture points from the front captain screen due to data inaccuracies.\n\n\nUpdate 1.3(47):\n\nShip comparison is now in the encyclopedia area.\n\nAdded more data points on the ships tab.\n\nFixed graph on profile which was saying K/D but logic was for K/G\n\nFixed a issue where ships were not showing up.\n\nFixed a crash on backing out of the app.\n\n\nPatch 1.2.10\n\nFixed crash on hidden profiles.\n\nAdjusted settings menu.\n\nUpdated Attribution section.\n\nIncreased data collection from Wargaming servers for next update.\n\nHelp Support the app by showing an ad on launch.\n\n\nPatch 1.2.9\n\nFixed ship sorting.\n\nAdded swipe to refresh.\n\nAdded app shortcuts for Nougat.\n\nAdded Korean server.\n\nFixed color issues on search page.\n\nAdded Commonwealth sort.\n\n\nPatch 1.2.7\n\nFixed crash on Launch.\n\nFixed dropdown\'s colors.\n\nFixed France Filter\n\n\nPatch: 1.2.6\n\nAdded Notser to Twitch &amp; Youtube Stars list!\n\nFixed Main Battery accuracy graph. It now shows the correct numbers.\n\nFixing some text issues.\n\nFixing some crashes.\n\nAdded in module price and xp.\n\n\nPatch: 1.2.5\n\nAdjusting Warships.Today API implementation to match new API.\n\n\nUpdate 1.2:\n\nShipopedia upgraded to include Captain skills, upgrades and flags.\n\nAdded the ability to change what modules on a Ship\'s profile.\n\nData provided was switched to Warship.Today.\n\nMore information like armor, per AA gun stats, etc added to ship profiles.\n\nEnabled the ability to login to view private account information.\n\nCommunity Assistant(CA) Rating v1 added. To view the rating, go to settings to opt-in. More information is available by clicking the rating.\n\nKamiSamurai and Crysantos were added to the Twitch Stars section.\n\nWoWsReplays.com was added to Useful Websites.\n\nAdded No Arp ship option, new Dark theme option, Server changer and Save point amounts option in the Settings Menu.\n\nAdded Accuracy information about Main Battery and Torpedoes.\n\nRemoved Capture and Defense points because WG wasn\'t sending correct data.\n\nAdded more sorting options in the shipopedia.\n\nAdded information on captains and ships with information on Team Battles, PvE and division battles.\n\nAdding some material design animation.\n\nAdded a slide view to go back ability on most views.
        \n\n\nPatch 1.1.6:\n\nFixing a few more crashes.\n\nUpdating Refresh logic.\n\n\nPatch 1.1.5:\n\nAdded Swipe back.\n\nWoWs Replays added in useful sites and twitch &amp; Youtube Stars.\n\nCaptain Ships should keep position. \n\n\nPatch 1.1.4:\n\n-Fixing crashes and bugs. \n\n\nPatch 1.1.3:\n\nAdded ClydeThaMonkey to the Twitch Stars.\n\nAdjusted paypal and donation area\n\nFixed some text issues\n\nOn Larger devices, more detailed images will be shown.\n\nFixed up some tablet optimizations \n\n\nPatch 1.1.2:\n\nFixed bugs in translations.\n\nAdjusted memory usage on parts of the app.\n\nFixed a few crashes.\n\nAdded a few extra languages to Wargaming Server Choice.\n\n\nUpdate 1.1:\n\nMultiple Languages Added:\nGerman, Russian, Swedish, Spanish and Dutch.\n\nTablet Support Added\n\nAdded saved data to individual shipsHolder\n\nAdded Wargaming server language choice\n\nAdded Difference in Achievements\n\nAdded more top ship stats\n\nAdded even more data on profile and shipsHolder\n\nMoved saved captain to first position when comparing\n\nDecreased memory usage\n\nFixed an issue when the app would crash if the application was open for a long period of time\n\nCreated a title area in the comparison screen that follows scrolling\n\nAdded Armored Patrol and DRMB to Useful Website Section\n\nAdded more graphs and reorganized the more details area into two tabs\n\nAdded iEarlGrey to Twitch &amp; Youtube stars\n\n Fixed a few bugs found in Beta\n\n\nPatch 1.0.1:\n\nFixing memory issues on Twitch and Youtube Section. \n\nSpeed improvements on multiple parts of the app. \n\nStability improved in multiple sections. \n\nBugs smashed. \n\nUpdate 1.0:\n\nRanked Battle statistics added.\n\nNavigational Drawer added.\n\nTwitch and Youtube area redone\n\nViewing a ship is redone to show more information.\n\nAdded a new website area and server information page. \n\nAdded the ability to view a voluntary ad instead of donating money.\n\nShipopedia redone to include WarshipStats.com information in graph form.\n\nUpdate icons and action bar.\n\nAdd/remove captain is now in the top bar.\n\nApp speed improvements and fixes\n\n\n0.7 Update Notes:\n\nWarshipstats data and features added throughout the app. \n\nShipopedia added to the app. \n\nSplash screen added. \n\nCompare section updated. \n\nApp improvements and bug fixes\n\n\n0.6.1 Patch Notes:\n\nBug fixes and patching up RU server. \n\n\n0.6 Update Notes:\n\nCaptain Comparison section added in Search Area.\n\n-Multiple graphical adjustments, fixing numbers up.\n\nImproved Stability.\n\nWarshipstats.com information added to app. More in the future.\n\n- More information stored on device. To be used in future updates.\n\n-More Links added.\n\n\n0.5.1 Update Notes:\n\nGraphic changes, additional graphs and additions to views.\n\nGlossary added to settings for icons.\n\nSpeed enhancements and bug fixes.\n\nFixed refresh.\n\n\n0.5.0.1 Patch Notes: \n\nSome text Fixed.\n\nmultiple crashes addressed.\n\nFixed logic on action bar.\n\n\n0.5.0 Update Notes:\n\nFirst update\n\nCaptain statistics and graphs.\n\nShip statistics and images\n\nCaptain Search.\n\nBattle Reference graphs on Avg Exp, Acg Damage, Win Rate and more.\n\n- Achievements and their descriptions.</string>
    <string name="attribution_text" translatable="false">This application is powered by Wargaming Developer Partner Program and Warships.Today. Thank you for making this app possible.\n\nAmazing people from the community that helped create this app:\n  /u/compassghost for the launcher icon.\n  Star, Pack, Syth and Goat for ideas and initial testing.\n\nThank you to OhJeezums, ClydeThaMonkey, Mejashtv, ShipComrade, NoZoupForYou Gaming, Hyf1re, Notser and iChase for the insane amount of support and love you gave to this app and community. Without your support, the app and I would not be where we are today.\n\nSweet icons from NounProject:\nexplosion by Aha-Soft, Rank by Zlatko Najdenovski, Trophy by Will Gausmann, Medal by Creative Stall, Ship by Daouna Jeong, Medal by Denis Klyunchnikov, expand by Garrett Knoll, torpedo by Blaise Sewell, Airplane by Creative Stall, Delete by Simon Brown, Book by Creative Stall, Star by Erin Standley, Trophy by Creative Stall, connection by Jason D. Rowley, Email by Lorena Salagre, thumbs up by Nick Holroyd, Ying Yang by Vicons Design, Heart by Bruno Gätjens González, hexagons by Creative Stall and Battleship by Yair Cohen.</string>
    <string name="app_name">Assist</string>
    <string name="base_server_language">en</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_captains">Captains</string>
    <string name="action_refresh">Refresh</string>
    <string name="welcome">Welcome</string>
    <string name="search_et_hint">Enter a username</string>
    <string name="search_no_results">No Results</string>
    <string name="no_internet_title">No Connection To Internet</string>
    <string name="no_internet_message">Would you like to turn your internet on?</string>
    <string name="no_internet_neutral_text">Settings</string>
    <string name="no_text_error">You must enter a search term</string>
    <string name="list_clan_added_message">added</string>
    <string name="list_clan_removed_message">removed</string>
    <string name="captain_average_exp">Average Experience</string>
    <string name="captain_average_damage">Average Damage</string>
    <string name="captain_kills_deaths">Kills per Death</string>
    <string name="captain_battles">Survival Rate</string>
    <string name="captain_winrate">Win Rate</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_unfavorite">Unfavorite</string>
    <string name="ships_hint">Name or Tier</string>
    <string name="donate_title">Would you like to help support this project?</string>
    <string name="donate_message">HALF here, I hope that WoWS Community Assistant has assisted you in playing the game World of Warships. I want to create the best World of Warships assistant for you. I am working constantly on making this app a better app for you for free. If you would like to support the development of this app, donate or view a quick ad below. Anything helps me continue working on this app and do giveaways so I can give back to you for the support.</string>
    <string name="search_compare_default_text">Long press on a captain to add them to the compare list</string>
    <string name="title_compare">Compare</string>
    <string name="action_shipopedia">Shipopedia</string>
    <string name="action_websites">Useful Websites</string>
    <string name="action_twitch">Twitch &amp; Youtube Stars</string>
    <string name="action_youtubers">Helpful Youtubers</string>
    <string name="action_donate">Support the App</string>
    <string name="drawer_search">Search &amp; Compare</string>
    <string name="drawer_captains">Captains</string>
    <string name="win_rate">Win Rate</string>
    <string name="planes_downed_game">Planes Downed / Game</string>
    <string name="captures_game">Captures / Game</string>
    <string name="def_reset_game">Def Reset / Game</string>
    <string name="survival_rate">Survival Rate</string>
    <string name="battles">Battles</string>
    <string name="total_xp">Total XP</string>
    <string name="max_kills">Max Kills</string>
    <string name="max_damage">Max Damage</string>
    <string name="max_planes_killed">Max Planes Killed</string>
    <string name="max_xp">Max XP</string>
    <string name="traveled">Traveled</string>
    <string name="survived_wins">Survived Wins</string>
    <string name="save_captain">Save Captain</string>
    <string name="dialog_view_ad">View Ad</string>
    <string name="ship">Ship</string>
    <string name="wins">Wins</string>
    <string name="losses">Losses</string>
    <string name="draws">Draws</string>
    <string name="total_capture_points">Total Capture Points</string>
    <string name="total_defense_points">Total Defense Points</string>
    <string name="total_planes_downed">Total Planes Downed</string>
    <string name="torp_accuracy">Torpedo Accuracy</string>
    <string name="main_battery_accuracy">Main Battery Accuracy</string>
    <string name="warship_today_nprofile_page">Warship.Today Profile</string>
    <string name="total_spotting_damage">Spotting Damage</string>
    <string name="total_tanking_damage">Tanking Damage</string>
    <string name="total_torp_tanking_damage">Torp Tanking Damage</string>
    <string name="total_damage_to_buildings">Building Damage</string>
    <string name="total_suppressions">Suppressions</string>
    <string name="total_spots">Total Spots</string>
    <string name="max_spots">Max Spots</string>
</resources>