<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1.0"
    android:layout_marginBottom="5dp">


    <TextView
        android:layout_height="wrap_content"
        android:layout_width="0dip"
        android:layout_weight="0.35"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        android:text="@string/ship" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="0dip"
        android:layout_weight="0.20"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        android:text="@string/battles" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="0dip"
        android:layout_weight="0.20"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        android:text="@string/win_rate" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="0dip"
        android:layout_weight="0.25"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        android:text="@string/survival_rate" />
</LinearLayout>